# cja_auto_sdr

./: .env.example  .gitignore  BATCH_PROCESSING_GUIDE.md  CHANGELOG.md  DOCUMENTATION_REVIEW_SUMMARY.md  GITHUB_RELEASE_3.0.9.md  OPTIMIZATION_SUMMARY.md  OUTPUT_FORMATS.md  README.md  RELEASE_CHECKLIST_3.0.9.md  RELEASE_NOTES_3.0.9.md  STRESS_TEST_RESULTS.md  cja_sdr_generator.py  config.json.example  create_sample_outputs.py  pyproject.toml  stress_test.py
docs/: BATCH_PROCESSING_GUIDE.md  CLI_REFERENCE.md  CONFIGURATION.md  DATA_QUALITY.md  DATA_VIEW_NAMES.md  DIFF_COMPARISON.md  GIT_INTEGRATION.md  INSTALLATION.md  OPTIMIZATION_SUMMARY.md  OUTPUT_FORMATS.md  PERFORMANCE.md  QUICKSTART_GUIDE.md  QUICK_REFERENCE.md  SHELL_COMPLETION.md  STRESS_TEST_RESULTS.md  TROUBLESHOOTING.md  USE_CASES.md
sample_outputs/csv/: data_quality.csv  dimensions.csv  metadata.csv  metrics.csv
sample_outputs/diff/: sample_diff_report.md
sample_outputs/git-snapshots/: README.md
sample_outputs/git-snapshots/ProductionAnalytics_dv_12345/: dimensions.json  (+2 more)
sample_outputs/html/: sample_sdr.html
sample_outputs/json/: sample_sdr.json
sample_outputs/markdown/: sample_sdr.md
tests/: README.md  conftest.py  test_api_tuning.py  test_circuit_breaker.py  test_cja_initialization.py  test_cli.py  test_data_quality.py  test_diff_comparison.py  test_dry_run.py  test_early_exit.py  test_error_messages.py  test_excel_formatting.py  test_git_integration.py  test_logging_optimization.py  test_name_resolution.py  test_optimized_validation.py  test_output_formats.py  test_parallel_validation.py  test_process_single_dataview.py  test_profiles.py  test_shared_cache.py  test_utils.py  test_ux_features.py  test_validation_cache.py
