[project]
name = "cja-auto-sdr"
version = "3.0.14"
description = "Customer Journey Analytics SDR Generator with Data Quality Validation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cjapy>=0.2.4.post2",
    "numpy>=2.2.0,!=2.4.0",
    "pandas>=2.3.3",
    "xlsxwriter>=3.2.9",
    "tqdm>=4.66.0",
]

[project.scripts]
cja_auto_sdr = "cja_sdr_generator:main"
cja-auto-sdr = "cja_sdr_generator:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=4.1.0",
]
env = [
    "python-dotenv>=1.0.0",
]
completion = [
    "argcomplete>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["cja_sdr_generator.py"]

[tool.hatch.build.targets.sdist]
only-include = ["cja_sdr_generator.py", "pyproject.toml", "README.md", "LICENSE"]
